--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -81,12 +81,12 @@
   box-sizing: border-box;
   width: 210px;
   min-height: 392px;
-  margin-top: -328px;
+  margin-top: -330px;
   // margin-top: -420px;
 }
 
 .footer__logo {
-  margin-bottom: 34px;
+  margin-bottom: 36px;
   overflow: hidden;
 }
 
@@ -155,7 +155,7 @@
     margin-top: -115px;
     margin-left: 0;
     // margin-left: 43px;
-    padding: 13px 8px 12px 8px;
+    padding: 13px 8px 12px;
 
 
    & h3 {
@@ -295,7 +295,7 @@
   .footer__contacts-list {
     margin-right: auto;
     min-width: 185px;
-    margin-top: 4px;
+    margin-top: 2px;
   }
 
   .footer__container {
