--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -187,6 +187,8 @@
   }
 
   .form__conditions {
+    margin-top: 0;
+
     font-size: 10px;
     line-height: 1.3;
   }
@@ -205,7 +207,7 @@
   }
 }
 
-@media (max-width: $m-width-max) {
+@media (max-width: $s-width-max) {
   .form {
     padding-left: 20px;
     padding-right: 20px;
