--- a/source/sass/swiper.scss
+++ b/source/sass/swiper.scss
@@ -1,9 +1,19 @@
-.swiper-pagination {
-  bottom: -10px;
-}
-
 .swiper-pagination .swiper-pagination-bullet-active {
   background-color: $brand-color;
+}
+
+@media (max-width: $m-width-max) {
+  swiper-container-horizontal > .swiper-pagination-bullets {
+    bottom: 6px;
+  }
+
+  .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
+    left: 44%;
+  }
+
+  .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0px 2px;
+}
 }
 
 @media (max-width: $m-width-max) {
