Создает слайдер на десктопе и улучшает на остальных разрешениях

--- a/source/sass/partners.scss
+++ b/source/sass/partners.scss
@@ -1,17 +1,18 @@
 $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
 
-.partners {
+.partners__wrapper {
   @media (min-width: $l-width) {
     @include line;
 
     &::before {
       top: 22px;
-      width: 58.1%;
-      right: 182px;
+      width: 61.1%;
+      right: 153px;
     }
   }
-
+  margin-top: 50px;
   margin-bottom: 62px;
+  spaceBetween: -10,
 }
 
 .partners__container {
@@ -26,6 +27,7 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
 
 .partners h2 {
   margin-bottom: 40px;
+  margin-top: 0; // swiper
 }
 
 .partners__list-button {
@@ -85,11 +87,11 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
   @media (min-width: $l-width) {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     justify-content: space-between;
 
     flex-grow: 1;
-    margin-left: -10px;
+    // margin-left: -10px; //swiper
   }
   padding-bottom: 35px;
 }
@@ -104,12 +106,11 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
 
   min-height: 133px;
   @media (min-width: $l-width) {
-    max-width: 268px;
-    margin-left: 10px;
+    max-width: 270px;
+    // margin-left: 10px; // swiper
     margin-bottom: 30px;
   }
 
-  border: solid 1px #d6d6d6;
   background-color: $light-color;
 }
 
@@ -118,9 +119,11 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
     display: flex;
     flex-grow: 1;
     flex-shrink: 1;
+    width: 270px;
 
     background-repeat: no-repeat;
     background-position: center;
+    border: solid 1px #d6d6d6;
     // background-size: contain;
     // filter: grayscale(1);
     // filter: gray;
@@ -155,8 +158,11 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
 }
 
 @media (max-width: $m-width-max) {
-  .partners {
+  .partners__wrapper {
     margin-bottom: 48px;
+    @media (min-width: $m-width) {
+      overflow: visible;
+    }
   }
 
   .partners h2 {
@@ -166,15 +172,21 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
     display: none;
   }
 
+  // .partners__list {
+  //   // flex-wrap: wrap;
+  // }
+
   .partners__item {
   @media (min-width: $m-width) {
     border: none;
     }
 
-    flex-basis: 280px;
+    flex-basis: 282px;
     height: 200px;
     // height: 200px;
     flex-shrink: 0;
+    margin-left: 10px; //swiper
+    margin-right: 10px; //swiper
 
     box-shadow: 0px 10px 18px 2px rgba(0, 0, 0, 0.05);
 
@@ -195,28 +207,53 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
         background-image: url('../img/shield-bw-l@1x.png');
         background-position: center;
         background-size: 236px;
+        // background-size: 260px;
+        // background-position-x: 23px;
+
       }
       &--ntf a {
         background-image: url('../img/ntf-bw-l@1x.png');
         background-position: center;
+      }
+
+      & a:hover,
+      & a:focus {
+        opacity: 0.5;
       }
     }
   }
 }
 
 @media (max-width: $s-width-max) {
-  .partners {
+  .partners__wrapper {
     margin-bottom: 16px;
+    margin-top: 22px;
+
+    overflow: visible;
   }
 
   .partners h2 {
     margin-bottom: 4px;
   }
 
+  // .partners__item {
+  //   flex-basis: 280px; // for swiper
+  //   flex-shrink: 0; // for wiper
+  //   height: auto; // for swiper
+
   .partners__item {
-    flex-basis: 280px; // for swiper
-    flex-shrink: 0; // for wiper
-    height: auto; // for swiper
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex-basis: 100%;
+    flex-grow: 1;
+    height: 135px;
+    margin: 0;
+    // margin: auto;
+
+    border: none;
+    box-shadow: none;
 
     &--ava a {
     background-image: url(../img/ava-bw-l@1x.png);
@@ -224,33 +261,99 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
     background-position-y: 2px;
     }
   }
+
+  .partners__item a {
+    width: 278px;
+    height: 133px;
+    flex-grow: 0;
+
+    border: solid 1px #d6d6d6;
+  }
 }
 
 @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
   .partners__item {
-
     &--ava a {
       background-image: url('../img/ava-bw-l@2x.png');
       background-position: center;
       background-size: contain;
+      background-position-x: 32%;
     }
 
     &--mirror a {
       background-image: url('../img/mirror-bw-l@2x.png');
       background-position: center;
       background-size: contain;
+      background-position-y: -18px;
+      background-position-x: 51%;
     }
 
     &--shield a {
       background-image: url('../img/shield-bw-l@2x.png');
       background-position: center;
-      background-size: contain;
+      // background-size: contain;
+      background-position-y: -27px;
+      background-position-x: 51%;
+      background-size: 79%;
     }
 
     &--ntf a {
       background-image: url('../img/ntf-bw-l@2x.png');
       background-position: center;
-      background-size: contain;
+      // background-size: contain;
+      background-position-y: -26px;
+      background-position-x: 47px;
+      background-size: 66%;
+    }
+
+  @media (max-width: $m-width-max) {
+    &--ava a {
+      background-size: 212px;
+    }
+
+    &--mirror a {
+      background-size: 180px;
+      background-position-y: 26px;
+    }
+
+    &--shield a {
+      background-size: 258px;
+      background-position-y: -6px;
+    }
+
+    &--ntf a {
+      background-size: 200px;
+      background-position-y: -10px;
     }
   }
+
+  @media (max-width: $s-width-max) {
+    &--ava a {
+      background-size: 177px;
+      background-position-x: 41%;
+      background-position-y: 0;
+    }
+
+    &--mirror a {
+      background-size: 180px;
+      background-position-y: -24px;
+    }
+
+    &--shield a {
+      background-size: 200px;
+      background-position-y: -21px;
+    }
+
+    &--ntf a {
+      background-size: 177px;
+      background-position-y: -24px;
+    }
+  }
+}
+
+
+  // @media (max-width: $s-width-max) {
+  //   &--ava a {
+  //   }
+  // }
 }
