Убирает автофокус из формы

--- a/source/sass/partners.scss
+++ b/source/sass/partners.scss
@@ -21,7 +21,7 @@ $gradient: linear-gradient(rgba(255, 255, 255, 0.6), rgba(225, 225, 225, 0.6));
     justify-content: stretch;
   }
 
-  overflow: visible;
+  overflow: hidden;
 }
 
 
