--- a/source/sass/menu.scss
+++ b/source/sass/menu.scss
@@ -32,7 +32,7 @@
   &:hover,
   &:focus {
     color: $dark-color;
-    text-decoration: none;
+    // text-decoration: none;
   }
 }
 
@@ -110,6 +110,7 @@
     font-size: 13.5px;
     font-weight: 400;
     letter-spacing: -1.1px; //Вопреки данным макета, ради PP
+    text-decoration: none;
 
     background-color: #e7e7e7;
     // border-bottom: qpx solid ;
