Делает ссылки выравнивающимися по левому краю

--- a/source/sass/menu.scss
+++ b/source/sass/menu.scss
@@ -8,7 +8,7 @@
   @include reset-list-style;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 
   font-size: 10px;
   font-weight: 500;
