--- a/source/sass/main-header.scss
+++ b/source/sass/main-header.scss
@@ -54,7 +54,20 @@
   &:focus {
     color: $dark-color;
   }
+
+  &--services {
+    color: $dark-color;
+
+    background-color: $brand-color;
+
+    &:hover,
+    &:focus {
+      opacity: 0.8;
+    }
+  }
 }
+
+
 
 .main-header__advantages {
   margin-top: 115px;
