Исправляет переполнение карточек Проектов

--- a/source/sass/projects.scss
+++ b/source/sass/projects.scss
@@ -34,7 +34,7 @@ $link-background-overlay: linear-gradient(rgba(225, 225, 225, 0.1), rgba(225, 22
   position: relative;
 
   flex-grow: 1;
-  flex-shrink: 0;
+  // flex-shrink: 0;
   min-height: 227px;
   margin-left: 3px;
   margin-bottom: 4px;
