--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -2,7 +2,7 @@
   color: $light-color;
   background-color: $dark-color;
 
-  padding-bottom: 25px;
+  padding-bottom: 30px;
 }
 
 .footer__contacts {
@@ -11,6 +11,9 @@
   display: flex;
   flex-wrap: wrap;
   padding-top: 800px;
+  @media (min-width: $l-width)  {
+    min-height: 402px; // New
+  }
 }
 
 .footer__contacts h2 {
@@ -27,7 +30,7 @@
   left: 50%;
 
   width: 100vw;
-  height: 804px;
+  height: 808px;
   margin-left: -50vw;
 
   background-color: $light-gray;
@@ -39,20 +42,30 @@
   border-bottom: solid 3px $brand-color;
 }
 
+
+
 .footer__form {
   z-index: 10;
-  position: relative;
+  position: relative; // !!
+  @media (min-width: $l-width)  {
+    position: absolute;
+    bottom: 0;
+  }
   left: 50%;
 
   box-sizing: border-box;
-  width: 580px;
-  @media (max-width: 1200px)  {
-    width: 520px;
-    margin-left: -260px;
-  }
-  margin-top: -180px;
-  margin-left: -290px;
-  padding: 18px 64px;
+  width: 49.6%;
+  padding-top: 49.6%;
+  // width: 580px;
+  // @media (max-width: 1200px)  {
+  //   width: 520px;
+  //   margin-left: -260px;
+  // }
+  // margin-top: -16%; // Не нужно, если абсолютно?
+  // margin-top: -180px;
+  margin-left: -25%;
+
+  // margin-left: -290px;
 
   color: $dark-color;
 
@@ -63,7 +76,35 @@
     line-height: 2;
     text-align: center;
     letter-spacing: 1px;
+
+    // margin-bottom: 45px;
+    margin-bottom: 9%;
+
+    // margin-top: 28px;
+    margin-top: 6%;
   }
+}
+
+
+.footer__form-wrapper {
+  @media (min-width: $m-width) {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  // @media (min-width: $l-width)  {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+
+    box-sizing: border-box;
+    padding: 3% 11%;
+
+    background-color: $light-color;
+  // }
 }
 
 .footer__contacts-list {
@@ -71,7 +112,7 @@
   width: 210px;
   margin-left: auto;
   margin-right: -10px;
-  margin-top: 48px;
+  margin-top: 52px;
 }
 
 .footer__container {
@@ -148,23 +189,34 @@
   .footer__form {
     left: 0;
 
-    flex-basis: 64.7%;
+    // flex-basis: 64.7%;
     // flex-shrink: 0;
+    flex-shrink: 0;
     max-width: 560px;
-    min-width: 285px;
+    // min-width: 285px;
+    width: 64.7%;
+    padding-top: 64.7%;
     margin-top: -115px;
     margin-left: 0;
     // margin-left: 43px;
-    padding: 13px 8px 12px;
 
 
-   & h3 {
+    & h3 {
+      // margin-top: 15%;
+      flex-shrink: 0;
+      margin-top: 4.5%;
+      margin-bottom: 7%;
+
       font-family: 'Roboto', Helvetica, sans-serif;
       font-size: 18px;
       font-weight: 900;
       line-height: 1.97;
       letter-spacing: 0.72px;
     }
+  }
+
+  .footer__form-wrapper {
+    padding: 13px 8px 12px;
   }
 
   .footer__contacts-list {
@@ -246,6 +298,14 @@
     padding-bottom: 0;
     background-color: #1a1a1a;
   }
+
+  .footer__form-wrapper {
+    padding-right: 0;
+    padding-left: 0;
+    margin: 0 auto;
+    max-width: 413px;
+  }
+
   .footer__contacts {
     flex-direction: column;
     padding-top: 0;
@@ -289,7 +349,8 @@
   }
 
   .footer__form h3 {
-    margin-bottom: 9px;
+    margin-top: 5px;
+    margin-bottom: 21px;
   }
 
   .footer__contacts-list {
@@ -339,6 +400,7 @@
     margin-top: 40px;
     margin-bottom: 0;
     padding-bottom: 10px;
+    padding-top: 14px;
 
     line-height: 14px;
 
