--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -339,7 +339,7 @@
   .footer__form {
     @include full-width;
     order: 2;
-    max-width: initial;
+    max-width: none;
     min-width: auto;
     margin-top: 0;
     padding-top: 22px;
